Implement registration functionality

--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -666,6 +666,12 @@ ul.pagination .active a {
   padding: 6px 20px !important;
 }
 
+.logout-button-top {
+  border: 2px solid #dedede;
+  margin-left: 8px;
+  padding: 6px 20px !important;
+}
+
 .add-button {
   background: #28a745;
   color: #fff;
