--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -48,8 +48,8 @@
 		<div class="row">
 			<div class="col-md-12">
 				<nav class="navbar navbar-expand-lg  navigation">
-					<a class="navbar-brand" href="index.html">
-						<img src="images/logo.png" alt="">
+					<a class="navbar-brand" href="/">
+						<img src="{{ asset('build/logo.png') }}" alt="">
 					</a>
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
@@ -57,7 +57,7 @@
 					<div class="collapse navbar-collapse" id="navbarSupportedContent">
 						<ul class="navbar-nav ml-auto main-nav ">
 							<li class="nav-item active">
-								<a class="nav-link" href="index.html">Home</a>
+								<a class="nav-link" href="/">Home</a>
 							</li>
 							<li class="nav-item">
 								<a class="nav-link" href="dashboard.html">Dashboard</a>
@@ -91,12 +91,24 @@
 							</li>
 						</ul>
 						<ul class="navbar-nav ml-auto mt-10">
-							<li class="nav-item">
-								<a class="nav-link login-button" href="index.html">Login</a>
-							</li>
+							{% if app.user %}
+								<li class="nav-link">Welcome {{ app.user.firstname }}</li>
+							{% else %}
+								<li class="nav-item">
+									<a class="nav-link login-button" href="/login">Login</a>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link login-button" href="/register">Register</a>
+								</li>
+							{% endif %}
 							<li class="nav-item">
 								<a class="nav-link add-button" href="#"><i class="fa fa-plus-circle"></i> Add Listing</a>
 							</li>
+							{% if app.user %}
+								<li class="nav-item">
+									<a class="nav-link logout-button-top" href="/logout">Logout</a>
+								</li>
+							{% endif %}
 						</ul>
 					</div>
 				</nav>
@@ -498,7 +510,7 @@
         <div class="block-2 app-promotion">
           <a href="">
             <!-- Icon -->
-            <img src="images/footer/phone-icon.png" alt="mobile-icon">
+            <img src="{{ asset('build/footer/phone-icon.png') }}" alt="mobile-icon">
           </a>
           <p>Get the Dealsy Mobile App and Save more</p>
         </div>
