--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,77 +1,69 @@
-{% extends '@!EasyAdmin/page/login.html.twig' %}
+{% extends 'base.html.twig' %}
 
-{% block title %}Sign in!{% endblock %}
+{% block title %}Log in!{% endblock %}
 
-{% block wrapper_wrapper %}
-    {% set page_title = block('page_title') %}
-    {% set _username_label = username_label is defined ? username_label|trans : 'login_page.username'|trans({}, 'EasyAdminBundle') %}
-    {% set _password_label = password_label is defined ? password_label|trans : 'login_page.password'|trans({}, 'EasyAdminBundle') %}
-    {% set _sign_in_label = sign_in_label is defined ? sign_in_label|trans : 'login_page.sign_in'|trans({}, 'EasyAdminBundle') %}
+{% block body %}
+<section class="page-title">
+	<!-- Container Start -->
+	<div class="container">
+		<div class="row">
+			<div class="col-md-8 offset-md-2 text-center">
+				<!-- Title text -->
+				<h3>Sign in</h3>
+			</div>
+		</div>
+	</div>
+	<!-- Container End -->
+</section>
 
-    <div class="login-wrapper">
-        <header class="main-header mb-4">
-            <div id="header-logo">
-                {#{% block header_logo %}
-                    {% if page_title %}
-                        {% if ea is defined %}
-                            <a class="logo {{ page_title|length > 14 ? 'logo-long' }}" title="{{ page_title|striptags }}" href="{{ path(ea.dashboardRouteName) }}">
-                                {{ page_title|raw }}
-                            </a>
-                        {% else %}
-                            <div class="logo {{ page_title|length > 14 ? 'logo-long' }}">
-                                {{ page_title|raw }}
-                            </div>
-                        {% endif %}
+<section class="section">
+    <div class="container">
+		<div class="row">
+            <div class="col-md-4 offset-md-4">
+                <form method="post">
+                    {% if error %}
+                        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
                     {% endif %}
-                {% endblock header_logo %}#}
-                {{ sign_in_label }}
+
+                    {% if app.user %}
+                        <div class="mb-3">
+                            You are logged in as {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
+                        </div>
+                    {% endif %}
+
+                    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+                    <label for="inputEmail">Email</label>
+                    <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" required autofocus>
+                    <label for="inputPassword">Password</label>
+                    <input type="password" name="password" id="inputPassword" class="form-control" required>
+
+                    <input type="hidden" name="_csrf_token"
+                        value="{{ csrf_token('authenticate') }}"
+                    >
+
+                    {#
+                        Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
+                        See https://symfony.com/doc/current/security/remember_me.html
+
+                        <div class="checkbox mb-3">
+                            <label>
+                                <input type="checkbox" name="_remember_me"> Remember me
+                            </label>
+                        </div>
+                    #}
+                    <br/>
+                    <button class="w-100 btn btn-lg btn-primary" type="submit">
+                        Sign in
+                    </button>
+                </form>
             </div>
-        </header>
-
-        {% if error|default(false) %}
-            <div class="w-100 alert alert-danger">
-                {{ error.messageKey|trans(error.messageData, 'security') }}
+        </div>
+        <div class="row">
+            <div class="col-md-4 offset-md-4">
+                <span>Or</span>
+                <a class="w-100 btn btn-primary btn-lg" href="/register">Register</a>
             </div>
-        {% endif %}
-
-        <section class="content">
-            <form method="post" action="{{ action|default('') }}">
-                {% if csrf_token_intention|default(false) %}
-                    <input type="hidden" name="_csrf_token" value="{{ csrf_token(csrf_token_intention) }}">
-                {% endif %}
-
-                <input type="hidden" name="{{ target_path_parameter|default('_target_path') }}" value="{{ target_path|default(ea is defined ? path(ea.dashboardRouteName) : '/') }}" />
-
-                <div class="form-group field-text">
-                    <label for="username" class="sr-only form-control-label required">{{ _username_label }}</label>
-                    <div class="form-widget form-widget-with-icon">
-                        <i class="fa fa-fw fa-user"></i>
-                        <input type="text" id="username" name="{{ username_parameter|default('_username') }}" class="form-control" placeholder="{{ _username_label }}" value="{{ last_username|default('') }}" required autofocus>
-                    </div>
-                </div>
-
-                <div class="form-group field-password">
-                    <label for="password" class="sr-only form-control-label required">{{ _password_label }}</label>
-                    <div class="form-widget form-widget-with-icon">
-                        <i class="fa fa-fw fa-lock"></i>
-                        <input type="password" id="password" name="{{ password_parameter|default('_password') }}" class="form-control" placeholder="{{ _password_label }}" required>
-                    </div>
-                </div>
-
-                <div class="form-group field-button">
-                    <button type="submit" class="btn btn-primary btn-lg btn-block">{{ _sign_in_label }}</button>
-                </div>
-            </form>
-
-            <script type="text/javascript">
-                const loginForm = document.querySelector('form');
-                loginForm.addEventListener('submit', () => {
-                    loginForm.querySelector('button[type="submit"]').setAttribute('disabled', 'disabled');
-                }, false);
-            </script>
-        </section>
-        <section>
-            Or <a class="btn btn-primary btn-lg" href="/register">Register</a>
-        </section>
+        </div>
     </div>
+</section>
 {% endblock %}
