--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -26,7 +26,6 @@
 	<link href="plugins/jquery-nice-select/css/nice-select.css" rel="stylesheet">
 	<link href="plugins/seiyria-bootstrap-slider/dist/css/bootstrap-slider.min.css" rel="stylesheet">
 	<!-- CUSTOM CSS -->
-	<link href="css/style.css" rel="stylesheet">
 
 	<!-- FAVICON -->
 	<link href="img/favicon.png" rel="shortcut icon">
@@ -49,7 +48,7 @@
 			<div class="col-md-12">
 				<nav class="navbar navbar-expand-lg  navigation">
 					<a class="navbar-brand" href="/">
-						<img src="{{ asset('build/logo.png') }}" alt="">
+						<img src="{{ asset('build/logo.png') }}" alt="Le Bawbaw">
 					</a>
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
@@ -102,7 +101,7 @@
 								</li>
 							{% endif %}
 							<li class="nav-item">
-								<a class="nav-link add-button" href="#"><i class="fa fa-plus-circle"></i> Add Listing</a>
+								<a class="nav-link add-button" href="/post/add"><i class="fa fa-plus-circle"></i> Add Listing</a>
 							</li>
 							{% if app.user %}
 								<li class="nav-item">
