--- a/templates/post/new.html.twig
+++ b/templates/post/new.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}{% form_theme form 'bootstrap_4_layout.html.twig' %}
 
-{% block title %}Register{% endblock %}
+{% block title %}Create Post{% endblock %}
 
 {% block body %}
 <section class="page-title">
@@ -9,13 +9,12 @@
 		<div class="row">
 			<div class="col-md-8 offset-md-2 text-center">
 				<!-- Title text -->
-				<h3>Sign Up</h3>
+				<h3>Post your ad</h3>
 			</div>
 		</div>
 	</div>
 	<!-- Container End -->
 </section>
-
 {#{% for flashError in app.flashes('verify_email_error') %}
     <section class="section">
         <div class="alert alert-danger" role="alert">{{ flashError }}</div>
@@ -25,18 +24,10 @@
 <section class="section">
     <div class="container">
 		<div class="row">
-            <div class="col-md-4 offset-md-4">
-                <h1>Please sign up</h1>
-
-                {{ form_start(form) }}
-                    {{ form_row(form.first_name) }}
-                    {{ form_row(form.last_name) }}
-                    {{ form_row(form.email) }}
-                    {{ form_row(form.plainPassword) }}
-                    {# {{ form_row(form.plainPassword.second) }}#}
-
-                    <button type="submit" class="w-100 btn btn-lg btn-primary">Sign up</button>
-                {{ form_end(form) }}
+            <div class="col-md-6 offset-md-3">
+                {{ form(form) }}
+                {#{{ form_row(form.image_one) }}#}
+                {#{{ form_row(form.image_two) }}#}
             </div>
         </div>
 </section>
