--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends 'login.html.twig' %}
 
 {% block title %}Log in!{% endblock %}
 
@@ -30,7 +30,7 @@
                             You are logged in as {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
                         </div>
                     {% endif %}
-
+                    <a href="/"><img class="mb-4" src="{{ asset('build/logo.png') }}" alt="Le Bawbaw" width="72" height="57"></a>
                     <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
                     <label for="inputEmail">Email</label>
                     <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" required autofocus>
@@ -62,6 +62,7 @@
             <div class="col-md-4 offset-md-4">
                 <span>Or</span>
                 <a class="w-100 btn btn-primary btn-lg" href="/register">Register</a>
+                <p class="mt-5 mb-3 text-muted">© 2017–2021</p>
             </div>
         </div>
     </div>
