Add post display functionality

--- a/templates/category/show.html.twig
+++ b/templates/category/show.html.twig
@@ -135,7 +135,7 @@
                                         <div class="card">
                                             <div class="thumb-content">
                                                 <!-- <div class="price">$200</div> -->
-                                                <a href="">
+                                                <a href="/post/{{ post.postSlug }}">
                                                     <img 
                                                     class="card-img-top img-fluid" 
                                                     src="data:image/png;base64,{{ post.postImages[0].image | base64 }}" width="210" height="138" 
